[gd_scene load_steps=12 format=3 uid="uid://ts1by1fsvq0w"]

[ext_resource type="PackedScene" uid="uid://clpiwenruvqub" path="res://Scenes/fader.tscn" id="1_p8761"]
[ext_resource type="PackedScene" uid="uid://c3o7xc4gc5h13" path="res://Scenes/backgroundOffice.tscn" id="2_lh2wi"]
[ext_resource type="Script" uid="uid://b2f8u486rcnae" path="res://Scripts/day_brain.gd" id="3_j0ssp"]
[ext_resource type="Script" uid="uid://bvu8l2hyb4g2j" path="res://Scripts/typing_brain.gd" id="4_kmxud"]
[ext_resource type="Texture2D" uid="uid://mgxg5clyf7k6" path="res://Visual Assets/New Assets/Full Screen Scenes/Office Background.png" id="5_slnaj"]
[ext_resource type="Texture2D" uid="uid://dekxkt8sfts6u" path="res://Visual Assets/New Assets/Full Screen Scenes/Monitor Screen.png" id="6_k3jav"]
[ext_resource type="PackedScene" uid="uid://dtpqjdqelptt3" path="res://Scenes/screen_ui.tscn" id="7_4qd7i"]
[ext_resource type="PackedScene" uid="uid://b4our54yywg7p" path="res://Scenes/dave.tscn" id="8_r33wl"]
[ext_resource type="Script" uid="uid://bjtkrmyuvhvpu" path="res://Scripts/specifics_2.gd" id="9_qarlu"]
[ext_resource type="PackedScene" uid="uid://brp0wa3mmjqge" path="res://Scenes/notif.tscn" id="11_p8761"]
[ext_resource type="Texture2D" uid="uid://w15npmrlaekf" path="res://Visual Assets/New Assets/Full Screen Scenes/Boss screen new.png" id="12_lh2wi"]

[node name="Main" type="Node2D"]

[node name="Fader" parent="." instance=ExtResource("1_p8761")]
scale = Vector2(2, 2)

[node name="Background" parent="." instance=ExtResource("2_lh2wi")]

[node name="InteractableElement" parent="Background/Furniture/Corkboard" index="0"]
YarnNodeLink = "Corkboard"

[node name="InteractableElement" parent="Background/Furniture/OfficeDoor boss" index="0"]
Type = 3
readyToLeave = true
YarnNodeLink = "Boss"

[node name="InteractableElement" parent="Background/Furniture/OfficeFilingCabinet" index="2"]
YarnNodeLink = "Cabinet"

[node name="InteractableElement" parent="Background/Furniture/PosterGroup" index="0"]
YarnNodeLink = "Posters"

[node name="Jen1" parent="Background/Furniture" index="12"]
z_index = -1

[node name="DeskInteractable" parent="Background/Furniture/DaveDesk/DeskChair" index="1"]
Type = 1

[node name="InteractableElement" parent="Background/Kitchen/WaterCooler" index="1"]
YarnNodeLink = "Fountain"

[node name="InteractableElement" parent="Background/Kitchen/BackgroundKitchen/Cabinets2/CoffeeMachine" index="0"]
YarnNodeLink = "CoffeeMachine"

[node name="InteractableElement" parent="Background/Kitchen/Clipboard" index="0"]
YarnNodeLink = "Clipboard"

[node name="DayBrain" type="Node" parent="." node_paths=PackedStringArray("BossScreen", "BossDialogue", "DaveAnchor", "BossAnchor", "Camera")]
script = ExtResource("3_j0ssp")
BossScreen = NodePath("../BossScreen")
BossDialogue = NodePath("../BossScreen/BossAnchor")
DaveAnchor = NodePath("../Dave/DialogueMarker")
BossAnchor = NodePath("../BossScreen/BossAnchor")
Camera = NodePath("../Camera2D")
camera_zoom = Vector2(1.5, 1.5)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -960
limit_top = -541
limit_right = 960
limit_bottom = 541
limit_smoothed = true

[node name="TypingBrain" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_kmxud")

[node name="ComputerScreen" type="Node2D" parent="."]
visible = false
z_index = 5

[node name="Black" type="Sprite2D" parent="ComputerScreen"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("5_slnaj")

[node name="Screen" type="Sprite2D" parent="ComputerScreen"]
texture = ExtResource("6_k3jav")

[node name="ScreenUI" parent="." instance=ExtResource("7_4qd7i")]
unique_name_in_owner = true
texture_filter = 1

[node name="RichTextLabel" parent="ScreenUI/EmailList/Inbox" index="0"]
texture_filter = 1

[node name="Boss" parent="ScreenUI/EmailList/SummariesContainer" index="0"]
MainBody = "Hey Dave, 

I just wanted to say good work navigating the meeting yesterday. It was definitely throwing you in the deep end, but the captain seemed to approve. If you have any questions about how the company works that A-man or big J can't answer, just gimme a shout.

Peace, 
Moz

"
ReplyBody1 = "Hi Moz,

Really glad to hear it, thanks for preparing the powerpoint and walking us through the options. I'll let you know if I think of anything! 

Best,
Dave"

[node name="RichTextLabel" parent="ScreenUI/EmailList/SummariesContainer/Boss/Button" index="0"]
texture_filter = 1

[node name="MainEmailBody" parent="ScreenUI/MainEmail/EmailBody/ScrollContainer/Control" index="0"]
texture_filter = 1

[node name="Sender" parent="ScreenUI/MainEmail/Sender&Subj/Panel/BoxContainer" index="0"]
texture_filter = 1

[node name="ToBox" parent="ScreenUI/MainEmail/Sender&Subj/Panel2/BoxContainer" index="0"]
texture_filter = 1

[node name="RichTextLabel" parent="ScreenUI/MainEmail/Sender&Subj/Panel2" index="1"]
texture_filter = 1

[node name="Hint" parent="ScreenUI/MainEmail" index="4"]
texture_filter = 1

[node name="Budget" parent="ScreenUI/BottomBar" index="1"]
visible = false

[node name="Dave" parent="." instance=ExtResource("8_r33wl")]
unique_name_in_owner = true
position = Vector2(-590, 314)

[node name="Specifics2" type="Node" parent="." node_paths=PackedStringArray("AlexNotif", "JenNotif", "emails", "outsideDoor", "DoorNotif", "BossNotif", "BossDoor", "brain")]
script = ExtResource("9_qarlu")
AlexNotif = NodePath("../Notifications/Alex")
JenNotif = NodePath("../Notifications/Jen")
emails = NodePath("../ScreenUI")
outsideDoor = NodePath("../Background/Furniture/OfficeDoor enter/InteractableElement")
DoorNotif = NodePath("../Notifications/Door")
BossNotif = NodePath("../Notifications/BossDoor")
BossDoor = NodePath("../Background/Furniture/OfficeDoor enter/InteractableElement")
brain = NodePath("../DayBrain")

[node name="BossScreen" type="Node2D" parent="."]
visible = false
z_index = 10

[node name="Sprite2D" type="Sprite2D" parent="BossScreen"]
texture = ExtResource("12_lh2wi")

[node name="BossAnchor" type="Node2D" parent="BossScreen"]
position = Vector2(422, -209)

[node name="Notifications" type="Node2D" parent="."]

[node name="Alex" parent="Notifications" instance=ExtResource("11_p8761")]
position = Vector2(-552, -256)
frame_progress = 0.801034

[node name="Jen" parent="Notifications" instance=ExtResource("11_p8761")]
position = Vector2(-138, -470)
frame_progress = 0.0

[node name="Door" parent="Notifications" instance=ExtResource("11_p8761")]
visible = false
position = Vector2(-803, 161)
frame_progress = 0.0

[node name="BossDoor" parent="Notifications" instance=ExtResource("11_p8761")]
visible = false
position = Vector2(813, -338)
frame_progress = 0.0

[connection signal="interacted" from="Background/Furniture/OfficeDoor boss/InteractableElement" to="Specifics2" method="_on_boss_door_interacted"]
[connection signal="interacted" from="Background/Furniture/Jen1/JenInteractable" to="Specifics2" method="_on_jen_interactable_interacted"]
[connection signal="interacted" from="Background/Furniture/Alex/AlexInteractable" to="Specifics2" method="_on_alex_interactable_interacted"]
[connection signal="endOfDay" from="DayBrain" to="Specifics2" method="_on_day_brain_end_of_day"]
[connection signal="typing_finished" from="TypingBrain" to="ScreenUI" method="_on_typing_brain_typing_finished"]
[connection signal="pressed" from="ScreenUI/BottomBar/ShutDown" to="DayBrain" method="_on_shut_down_pressed"]

[editable path="Fader"]
[editable path="Background"]
[editable path="Background/Furniture/Corkboard/InteractableElement"]
[editable path="Background/Furniture/OfficeDoor boss/InteractableElement"]
[editable path="Background/Furniture/OfficeDoor enter/InteractableElement"]
[editable path="Background/Furniture/OfficeFilingCabinet/InteractableElement"]
[editable path="Background/Furniture/PosterGroup/InteractableElement"]
[editable path="Background/Furniture/Jen1/JenInteractable"]
[editable path="Background/Furniture/Alex/AlexInteractable"]
[editable path="Background/Furniture/DaveDesk/DeskChair/DeskInteractable"]
[editable path="Background/Kitchen/WaterCooler/InteractableElement"]
[editable path="Background/Kitchen/BackgroundKitchen/Cabinets2/CoffeeMachine/InteractableElement"]
[editable path="Background/Kitchen/Cabinets/Kettle/InteractableElement"]
[editable path="Background/Kitchen/Clipboard/InteractableElement"]
[editable path="ScreenUI"]
[editable path="ScreenUI/EmailList/SummariesContainer/Boss"]
[editable path="ScreenUI/Budget/Chart"]
[editable path="Dave"]
